@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Added Test2::Util::Events, a utility for examining an intercepted event
+      stream. Implemented by Dave Rolsky. GitHub #6.
     - Minor doc fixes
 
 0.000020  2016-02-05 09:32:52-08:00 America/Los_Angeles
